--- a/templates/page.html.jinja
+++ b/templates/page.html.jinja
@@ -4,13 +4,13 @@
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Offcanvas navbar large">
       <div class="container-fluid"> <a class="navbar-brand" href="/">
             <h1>{{ site_name }}</h1>
-         </a> <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
-            aria-controls="offcanvasNavbar2" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
+         </a> <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            aria-controls="offcanvasNavbar" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
          </button>
-         <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
-            aria-labelledby="offcanvasNavbar2Label">
+         <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar"
+            aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-               <h5 class="offcanvas-title" id="offcanvasNavbar2Label">{{ site_name }}</h5> <button type="button"
+               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">{{ site_name }}</h5> <button type="button"
                   class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
