--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -14,9 +14,9 @@
       such as logos to <a href="https://bimigroup.org/where-is-my-bimi-logo-displayed/">appear in the inbox and/or and
         next to the from address</a> in supporting mailbox providers. For the brand's image to be displayed by the
       mailbox provider, the email from domain must have a DMARC policy of <code>quarantine</code> or
-      <code>reject</code>, and the email must pass DMARC, ensURLng that the sending organization's domain has not been
+      <code>reject</code>, and the email must pass DMARC, ensuring that the sending organization's domain has not been
       spoofed by an attacker. Many <a href="https://bimigroup.org/bimi-infographic/"> mailbox providers</a> support
-      BIMI, including Google, making BIMI a "nice to have" feature for marketers and other newsletter senders. However,
+      BIMI, including Google, making BIMI a "nice to have" feature for marketers and other newsletter senders once the organization's domain has an enforced DMARC policy. However,
       it does have a cost, and <a
         href="https://learn.microsoft.com/en-us/answers/questions/5569074/does-exchange-online-support-bimi-verification">Microsoft
         does not currently support displaying BIMI images</a> in its products, so BIMI might not be useful for every
