--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -447,7 +447,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
           <h4 class="text-center">MTA-STS</h4>
           <p>SMTP MTA Strict Transport Security (MTA-STS) provides a way for domain owners to tell email services that
             they should only send email to the domain over a verified TLS connection to specific email servers. This
-            prevent man-in-the-middle attacks.</p>
+            prevents man-in-the-middle attacks.</p>
           <p><a href="/guides/mta-sts-and-tlsrpt#mta-sts">Learn more about MTA-STS</a>.</p>
         </div> <!-- End intro -->
         {% if results.mta_sts.error %}
