Remove unneeded newline

--- a/templates/guides/mta-sts-and-tlsrpt.html.jinja
+++ b/templates/guides/mta-sts-and-tlsrpt.html.jinja
@@ -1,11 +1,9 @@
 {% extends "page.html.jinja"%}
 {% set page = "mta-sts-and-tlsrpt-guide" %}
 {% set title = "MTA-STS and TLSRPT Guide" %}
-{% block meta_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS
-Reporting (TLSRPT){% endblock %}
+{% block meta_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS Reporting (TLSRPT){% endblock %}
 {% block og_title %}MTA-STS & TLSRPT Guide | {{site_name}} {% endblock %}
-{% block og_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS
-Reporting (TLSRPT){% endblock%}
+{% block og_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS Reporting (TLSRPT){% endblock%}
 {% block content %}
 <div class="row justify-content-center">
   <h2 class="text-center" id="mta-sts">SMTP MTA Strict Transport Security (MTA-STS)</h2>
