Update about page

--- a/templates/about.html.jinja
+++ b/templates/about.html.jinja
@@ -57,7 +57,10 @@ it has many features that make it stand out{% endblock %}
             </ul>
           </li>
           <li>MTA-STS</li>
-          <li>SMTP TLS reporting
+          <ul>
+              <li>Record parsing and validation</li>
+            </ul>
+          <li>SMTP TLS reporting (TLSRPT)
             <ul>
               <li>Record and policy parsing and validation</li>
             </ul>
