--- a/templates/guides/mta-sts-and-tlsrpt.html.jinja
+++ b/templates/guides/mta-sts-and-tlsrpt.html.jinja
@@ -93,7 +93,7 @@
   </div>
   <div class="row">
     <div class="col offset-lg-2 col-lg-8">
-      <p>SMTP TLS Reporting (TLSRPT) is a mechanism (defined in {{ "RFC 8460" | link_rfc }}) for sending email servers
+      <p>SMTP TLS Reporting (TLSRPT, though often called TLS-RPT) is a mechanism (defined in {{ "RFC 8460" | link_rfc }}) for sending email servers
         to provide statistics to domain owners about failures to establish TLS connections for SMTP. This allows
         domain owners to proactively identify TLS misconfigurations and man-in-the-middle attacks. Many commercial and
         open source DMARC parsing providers also support parsing TLSRPT reports, including <a
