--- a/templates/guides/mta-sts-and-tlsrpt.html.jinja
+++ b/templates/guides/mta-sts-and-tlsrpt.html.jinja
@@ -91,7 +91,7 @@
       </p>
       <div class="alert alert-info text-center" role="alert">
         <b>Note:</b> Subdomains do not inherit MTA-TLS policies from their parent domain ({{"RFC 8461 § 3.4" |
-        link_rfc}}). Any subdomains that are used to receive email have MTA-TLS configured separately.
+        link_rfc}}).<br>Any subdomains that are used to receive email must have MTA-TLS configured separately.
       </div>
     </div>
     </p>
